fdo#43497 Editing the first or last name clears initials.

Since middle names are not supported, editing the first name or last name will clear the initials if more than two initials are used. Specifically, the change was made to ModifyHdl_Impl() / IMPL_LINK() in optgenrl.cxx.

Change-Id: I067ad4701cee9077c500f4e8b3870db24e158cc3
Reviewed-on: https://gerrit.libreoffice.org/673
Reviewed-by: Noel Power <noel.power@suse.com>
Tested-by: Noel Power <noel.power@suse.com>